inputs align, fixed

--- a/app/assets/stylesheets/partials/_header.css.sass
+++ b/app/assets/stylesheets/partials/_header.css.sass
@@ -43,13 +43,14 @@ nav.eight-columns
     input
       height: 30px
       border: 1px solid $borders
-      font: 100 1.2em/1 'Oswald', sans-serif, 'Helvetica'
+      font: 100 1.2em 'Oswald', sans-serif, 'Helvetica'
+      vertical-align: middle
 
     input[type="search"]
       width: 200px
       margin-left: 20px
       font-family: 'Roboto', sans-serif
-      line-height: 1.8
+      padding: 0 5px
 
       &:focus
         outline: 0
